--- a/config.json
+++ b/config.json
@@ -5,12 +5,14 @@
 "localUDPPortName":"本服务UDP端口",
 "localASUDPPort":"7001",
 "localASUDPPortName":"本地AS程序UDP端口",
-"remoteIp":"127.0.0.1",
+"remoteIp":"115.159.39.71",
 "remoteIpName":"网络服务器IP",
 "remotePort":"10095",
 "remotePortName":"网络服务器Socket端口",
 "remoteDownloadPort":"5901",
 "remoteDownloadPortName":"网络服务器下载端口",
+"remoteDatabasePort":6007,
+"remoteDatabasePortName":"网络服务器product数据服务端口",
 "appID":"TESTTEST00030001",
 "appIDName":"新添加端口测试",
 "timer":60,
